hphp/test/zend/bad/ext/curl/tests/curl_setopt_CURLOPT_FOLLOWLOCATION_open_basedir.php
<?php
print (ini_get("OPEN_BASEDIR"));
$ch = curl_init();
$succes = curl_setopt($ch, CURLOPT_FOLLOWLOCATION, 1);
curl_close($ch);
var_dump($succes);
?>